src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

/* Current colors: tailwind.config.cjs */
/* New colors: https://www.radix-ui.com/colors */

/* https://www.radix-ui.com/docs/primitives/components/switch */
@import '@radix-ui/colors/blackA.css';


/* .redA {
  --redA1: hsla(0, 100%, 51.0%, 0.012);
  --redA2: hsla(0, 100%, 51.0%, 0.032);
  --redA3: hsla(0, 100%, 50.2%, 0.063);
  --redA4: hsla(0, 100%, 50.0%, 0.102);
  --redA5: hsla(0, 99.9%, 47.5%, 0.153);
  --redA6: hsla(0, 99.5%, 44.9%, 0.224);
  --redA7: hsla(359, 99.7%, 42.7%, 0.318);
  --redA8: hsla(359, 99.6%, 41.1%, 0.436);
  --redA9: hsla(358, 99.9%, 42.9%, 0.718);
  --redA10: hsla(358, 99.9%, 41.0%, 0.761);
  --redA11: #c30007d4;
  --redA12: hsla(355, 99.3%, 7.9%, 0.926);
} */


button {
    all: unset;
  }
  
  .SwitchRoot {
    width: 42px;
    height: 25px;
    background-color: var(--blackA9);
    border-radius: 9999px;
    position: relative;
    box-shadow: 0 2px 10px var(--blackA7);
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  }
  .SwitchRoot:focus {
    box-shadow: 0 0 0 2px black;
  }
  .SwitchRoot[data-state='checked'] {
    background-color: black;
  }
  
  .SwitchThumb {
    display: block;
    width: 21px;
    height: 21px;
    background-color: white;
    border-radius: 9999px;
    box-shadow: 0 2px 2px var(--blackA7);
    transition: transform 100ms;
    transform: translateX(2px);
    will-change: transform;
  }
  .SwitchThumb[data-state='checked'] {
    transform: translateX(19px);
  }
  
/* https://www.radix-ui.com/docs/primitives/components/separator */
@import '@radix-ui/colors/violet.css';

.SeparatorRoot {
  background-color: var(--violet6);
}
.SeparatorRoot[data-orientation='horizontal'] {
  height: 1px;
  width: 100%;
}
.SeparatorRoot[data-orientation='vertical'] {
  height: 100%;
  width: 1px;
}

